--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,20 +10,28 @@ html {
 }
 
 body {
-  margin-bottom: 6rem;
+  margin-bottom: 25rem;
 }
 
+@media screen and (max-width: 576px) {
+  body {
+    margin-bottom: 35rem;
+  }
+}
+
+
 .footer {
+  display: block;
   position: absolute;
-  padding: 1rem 0;
-  width: 100%;
   bottom: 0;
+  padding-top: 1rem;
+  width: 100%;
   color: #fff;
 }
 
 iframe {
   border-radius: 1rem;
-  height: 20rem;
+  height: 20.5rem;
   width: 100%;
 }
 
